Attempt to rename portfolio into lecture notes

--- a/_pages/lecture-notes.html
+++ b/_pages/lecture-notes.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Lecture Notes"
+permalink: /lecture-notes/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.lecture-notes %}
   {% include archive-single.html %}
 {% endfor %}
 
