--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Lecture Notes"
-permalink: /lecture-notes/
+title: "Portfolio"
+permalink: /portfolio/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.lecture-notes %}
+{% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
 
