Reverted the lecture notes changes

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Lecture Notes"
-permalink: /lecture-notes/
+title: "portfolio"
+permalink: /portfolio/
 author_profile: true
 ---
 
