--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,5 +1,5 @@
 ---
-title: "Lecture notes number 2"
+title: "Portfolio item number 2"
 excerpt: "Short description of Lecture notes number 2 <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
