--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,36 +1,173 @@
 ---
-layout: archive
 title: "Publications"
-permalink: /publications/
+permalink: /publications-template/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/2868926">
+      EFT & species scale: friends or foes?
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1797181">Bruno Valeixo Bento</a> (<a href="https://inspirehep.net/institutions/910767">Madrid, IFT</a>), <a href="https://inspirehep.net/authors/1762166">João F. Melo</a> (<a href="https://inspirehep.net/institutions/902962">Leuven U.</a>)</p>
+  
+  <p>
+      e-Print:
+          <a href="https://arxiv.org/abs/2501.08230">
+      2501.08230
+    </a>[hep-th]</p>
+  <p>
+        DOI:
+        <a href="https://doi.org/10.1007/JHEP05(2025)212">
+      10.1007/JHEP05(2025)212
+    </a>
+      </p>
+  <p>
+    Published in:<span>
+      JHEP 05 (2025),
+      212</span>,<span>
+      JHEP 25 (2020),
+      212</span></p>
+  <br>
+</body>
+</html>
 
-{% include base_path %}
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/2662774">
+      The Many Scales of Quantum Fields and Gravity
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1762166">João Melo</a> (<a href="https://inspirehep.net/institutions/902712">Cambridge U.</a>), None</p>
+  
+  
+  <p>
+        DOI:
+        <a href="https://doi.org/10.17863/CAM.96676">
+      10.17863/CAM.96676
+    </a>
+      </p>
+  <p>
+    Published in:<span></span></p>
+  <br>
+</body>
+</html>
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/1992049">
+      The propagator matrix reloaded
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1762166">João F. Melo</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a>)</p>
+  
+  <p>
+      e-Print:
+          <a href="https://arxiv.org/abs/2112.09119">
+      2112.09119
+    </a>[hep-th]</p>
+  <p>
+        DOI:
+        <a href="https://doi.org/10.21468/SciPostPhysCore.6.1.019">
+      10.21468/SciPostPhysCore.6.1.019
+    </a>
+      </p>
+  <p>
+    Published in:<span>
+      SciPost Phys.Core 6 (2023),
+      019</span></p>
+  <br>
+</body>
+</html>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/1806818">
+      Stringy corrections to the entropy of electrically charged supersymmetric black holes with $\mathrm{AdS}_5\times S^5$ asymptotics
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1762166">João F. Melo</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a>), <a href="https://inspirehep.net/authors/1060716">Jorge E. Santos</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a> and <a href="https://inspirehep.net/institutions/903138">Princeton, Inst. Advanced Study</a>)</p>
+  
+  <p>
+      e-Print:
+          <a href="https://arxiv.org/abs/2007.06582">
+      2007.06582
+    </a>[hep-th]</p>
+  <p>
+        DOI:
+        <a href="https://doi.org/10.1103/PhysRevD.103.066008">
+      10.1103/PhysRevD.103.066008
+    </a>(publication)
+      </p>
+  <p>
+    Published in:<span>
+      Phys.Rev.D 103 (2021) 6,
+      066008</span></p>
+  <br>
+</body>
+</html>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/1760191">
+      Developing local RG: quantum RG and BFSS
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1762166">João F. Melo</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a>), <a href="https://inspirehep.net/authors/1060716">Jorge E. Santos</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a> and <a href="https://inspirehep.net/institutions/903138">Princeton, Inst. Advanced Study</a>)</p>
+  
+  <p>
+      e-Print:
+          <a href="https://arxiv.org/abs/1910.09559">
+      1910.09559
+    </a>[hep-th]</p>
+  <p>
+        DOI:
+        <a href="https://doi.org/10.1007/JHEP05(2020)063">
+      10.1007/JHEP05(2020)063
+    </a>(publication)
+      </p>
+  <p>
+    Published in:<span>
+      JHEP 05 (2020),
+      063</span></p>
+  <br>
+</body>
+</html>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <p><b>
+    <a href="https://inspirehep.net/literature/1756025">
+      Introduction to Renormalisation
+    </a>
+  </b></p>
+  
+    <p><a href="https://inspirehep.net/authors/1762166">João F. Melo</a> (<a href="https://inspirehep.net/institutions/907623">Cambridge U., DAMTP</a>)</p>
+  
+  <p>
+      e-Print:
+          <a href="https://arxiv.org/abs/1909.11099">
+      1909.11099
+    </a>[hep-th]</p>
+  
+  
+  <br>
+</body>
+</html>
