--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -93,7 +93,7 @@ author_profile: true
 <body>
   <p><b>
     <a href="https://inspirehep.net/literature/1806818">
-      Stringy corrections to the entropy of electrically charged supersymmetric black holes with $\mathrm{AdS}_5\times S^5$ asymptotics
+      Stringy corrections to the entropy of electrically charged supersymmetric black holes with AdS5xS5 asymptotics
     </a>
   </b></p>
   
