Typo corrected in publications, added intro text

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -45,7 +45,7 @@ author_profile: true
     </a>
   </b></p>
   
-    <p><a href="https://inspirehep.net/authors/1762166">João Melo</a> (<a href="https://inspirehep.net/institutions/902712">Cambridge U.</a>), None</p>
+    <p><a href="https://inspirehep.net/authors/1762166">João Melo</a> (<a href="https://inspirehep.net/institutions/902712">Cambridge U.</a>)</p>
   
   
   <p>
